# data-mining-recommender-systems

./: .gitignore  README.md  assignment2_report_latex.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
data/processed/: README.md  ratings_test_filled.csv  ratings_test_filled_titles.csv
data/raw/: README.md  ratings_test.csv  ratings_train.csv
main/: __init__.py
notebooks/: 01_config_usage.ipynb  02_dataset_cleaner_usage.ipynb  03_itemknn_usage.ipynb  04_svd_usage.ipynb  05_lightfm_usage.ipynb  06_ratings_splitter_usage.ipynb  07_grid_search_usage.ipynb  08_predictions_usage.ipynb  09_lightfm_feature_importance_usage.ipynb  10_cold_start_popularity_coverage_usage.ipynb  11_model_comparison_all_metrics_usage.ipynb  12_cold_start_vs_normal_metrics_usage.ipynb  13_svd_predictions_usage.ipynb
scripts/: temp_itemknn_ndcg_runner.py
src/configs/: README.md  config.py
src/dataloader/: README.md  __init__.py  dataset_cleaner.py  ratings_splitter.py
src/evaluation/: README.md  __init__.py  grid_search.py  lightfm_feature_influence.py  metrics.py  pipeline.py
src/models/: README.md  __init__.py  base_model.py  cold_start.py  inference_router.py  item_knn_model.py  lightfm_demo_runner.py  lightfm_model.py  surprise_utils.py  svd_model.py
tests/: conftest.py  test_cold_start_fallback.py  test_dataset_cleaner.py  test_evaluation_metrics.py  test_grid_search.py  test_lightfm_feature_influence.py  test_lightfm_model.py  test_ratings_splitter.py  test_surprise_models.py
